# gh-tui

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  gh_tui_spec.md  pyproject.toml
.sisyphus/plans/: phase2-profile.md
gh_tui/: __init__.py  app.py  config.py  main.py
gh_tui/api/: __init__.py  client.py  models.py  rest.py
gh_tui/cache/: __init__.py  store.py
gh_tui/screens/: __init__.py  auth.py  profile.py  repo.py  search.py
gh_tui/styles/: app.tcss
gh_tui/utils/: __init__.py  formatters.py  repo_name.py
gh_tui/widgets/: __init__.py  code_view.py  file_tree.py  info_panel.py  markdown_view.py  status_bar.py
tests/: test_cache.py  test_formatters.py  test_repo_name.py  test_rest.py
