[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-tui"
version = "0.1.0"
description = "A keyboard-driven GitHub repo browser for the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "gh-tui contributors" }]
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pygments>=2.17.0",
    "markdown-it-py[plugins]>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
gh-tui = "gh_tui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["gh_tui"]

[tool.hatch.build.targets.wheel.force-include]
"gh_tui/styles" = "gh_tui/styles"

[tool.hatch.build]
include = ["gh_tui/styles/*.tcss"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
